--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>포켓몬스터</title>
+
+    <!-- Canonical -->
+    <script>
+      const canonicalHostName = 'https://www.pokeapi.com';
+
+      const { href, hostname, pathname, search } = window.location;
+
+      const isDev = hostname === 'localhost';
+
+      if (!isDev && !href.startsWith(canonicalHostName)) {
+        href = `${canonicalHostName}${pathname}${search}`;
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
